# fastapi_blank

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: .flake8  Dockerfile  alembic.ini  dependencies.py  logger.py  main.py  mypy.ini  pyproject.toml  pytest.ini  settings.py
app/api/: __init__.py
app/api/schemas/: simple.py
app/api/views/: simple.py
app/db/: engine.py  uow.py
app/db/migrations/: env.py
app/db/migrations/versions/: 2024-08-09-19-36_3a3b35d92ca2_init.py
app/db/models/: __init__.py  base.py  simple.py
app/db/repositories/: base.py  simple.py
app/exceptions/: app.py  external.py  http.py  simple.py
app/saq_tasks/: main.py
app/saq_tasks/background/: simple.py
app/saq_tasks/periodic/: simple.py
app/services/: __init__.py  simple.py
app/tests/: conftest.py  utils.py
app/tests/factories/: base.py  simple.py
app/tests/unit/: test_simple_service.py
application/: .flake8  Dockerfile  main.py  mypy.ini  pyproject.toml
application/api/: __init__.py
application/api/schemas/: simple.py
application/api/simple1/: schemas.py  views.py
application/api/simple2/: schemas.py  views.py
application/api/views/: simple.py
