[tool.poetry]
name = "application"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.4"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
sqlalchemy-utils = "^0.41.2"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.0"
faker = "^26.1.0"
pydantic-settings = "^2.4.0"
sentry-sdk = "^2.12.0"
pyjwt = "^2.9.0"
python-multipart = "^0.0.9"
pillow = "^10.4.0"
pytz = "^2024.1"
python-magic = "^0.4.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
